add chips and tests

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -18,11 +18,13 @@
 
     <!-- include source files here... -->
     <script src="compiled/client/models/Card.js"></script>
+    <script src="compiled/client/models/Chips.js"></script>
     <script src="compiled/client/collections/Hand.js"></script>
     <script src="compiled/client/collections/Deck.js"></script>
     <script src="compiled/client/models/App.js"></script>
 
     <script src="compiled/client/views/CardView.js"></script>
+    <script src="compiled/client/views/ChipsView.js"></script>
     <script src="compiled/client/views/HandView.js"></script>
     <script src="compiled/client/views/AppView.js"></script>
 
