--- a/index.html
+++ b/index.html
@@ -9,13 +9,16 @@
     <script src="lib/backbone.js"></script>
 
     <script src="compiled/client/models/Card.js"></script>
+    <script src="compiled/client/models/Chips.js"></script>
     <script src="compiled/client/collections/Hand.js"></script>
     <script src="compiled/client/collections/Deck.js"></script>
     <script src="compiled/client/models/App.js"></script>
 
     <script src="compiled/client/views/CardView.js"></script>
     <script src="compiled/client/views/HandView.js"></script>
+    <script src="compiled/client/views/ChipsView.js"></script>
     <script src="compiled/client/views/AppView.js"></script>
+
 
     <script src="compiled/client/main.js"></script>
   </body>
